@@ -1,5 +1,9 @@
 * What is new in gsl-1.12+:
 
+** Corrected gsl_sf_hyperg_2F1(a,b,c,x) to not give a domain error in
+   the case where c is a negative integer and the series terminates
+   with a finite result.
+
 ** The C99 inline keyword is now supported, in addition to the
    previously supported GNU-style inline.
 
